# restor-pc-rescuegrid

./: .dockerignore  .env.example  .gitattributes  .gitignore  Apply-WinPE-WinXShell.bat  Build-ReadyUSB.bat  CHANGELOG.md  INSTALL.txt  Install-RescueGrid.bat  Install-RescueGridTools.ps1  Prepare-WindowsSetup-USB.bat  README.md  Rebuild-WinPEBase.bat  cleanup_project.ps1  docker-compose.dev.yml  docker-compose.synology.yml  docker-compose.yml  install_dependencies.ps1  push_to_github.ps1  pyproject.toml  run_tests.bat  start.bat  start_agent.bat  start_agent_windows.bat  start_build_winpe.bat  start_dashboard.bat  start_dashboard_backup.bat  start_docker_synology.bat  start_tools_install.bat  start_usb_builder.bat  start_winpe_menu.bat
Lockpick/: README.md  Unlocker-Menu.ps1  Unlocker.cmd  minst.ini  minst.lng.1
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
bat/: Apply-WinPE-WinXShell.bat  Build-ReadyUSB.bat  Install-RescueGrid.bat  Prepare-WindowsSetup-USB.bat  Rebuild-WinPEBase.bat  run_tests.bat  start_agent.bat  start_agent_windows.bat  start_build_winpe.bat  start_dashboard.bat  start_docker_synology.bat  start_tools_install.bat  start_usb_builder.bat
docs/: ALEMBIC.md  ARCHITECTURE.md  BACKUP_PLANIFIE.md  INSTALL.md  LICENSES.md  RELEASE_NOTES_v12_1_HARDENING.md  ROADMAP_V12.md  SYNOLOGY_DEPLOY.md  TECHNICIAN_MANUAL.md
nginx/: nginx.conf
ps1/: Install-RescueGrid.ps1  Install-RescueGridTools.ps1  Run-Tests.ps1  Start-Agent.ps1  Start-Dashboard.ps1  Start-Docker-Synology.ps1  install_dependencies.ps1
scripts/: make_release_zip.py  (+2 more)
(+130 files in other folders)
